# aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  pr-comment.yml  release.yml
.well-known/mcp/: server-card.json
data/: mythos.yaml
data/yara/: aegis_loaders.yar
docs/: architecture.md  marketplace.md  publishing.md
docs/clients/: README.md
docs/clients/examples/: claude_code.json  claude_desktop.json  codex.json
docs/marketplace/: manifest.json
eval/: README.md  __init__.py  last_run.json  run.py
eval/fixtures/dependencies_npm/: expected.json
eval/fixtures/dependencies_npm/input/: package.json
eval/fixtures/obfuscation_loader/: expected.json
eval/fixtures/obfuscation_loader/input/: clean.js  loader.js
eval/fixtures/secrets_basic/: expected.json
eval/fixtures/secrets_basic/input/: clean.txt  leak.env
eval/llm_advise/: __init__.py  judge.py  leaderboard.py  prompts.jsonl  runner.py
src/aegis/cli/: diff.py  main.py
src/aegis/core/: constitution.py  index.py  journal.py  llm.py  policy.py  runner.py
src/aegis/intel/: local_llm.py  report_html.py
src/aegis/mcp/: server.py
src/aegis/scanners/: base.py  dependencies.py  dockerfile.py  filesystem.py  iac.py  obfuscation.py  secrets.py  yara_rules.py
tests/: test_diff.py  test_dockerfile_iac.py  test_dogfood_regression.py  test_exclude_flag.py  test_html_report.py  test_llm_advise.py  test_llm_judge.py  test_mcp.py  test_smoke.py  test_v013_fp_regressions.py
